[flake8]
exclude = bandcamper/__init__.py

[metadata]
name = bandcamper
version = attr:bandcamper.__version__.__version__
url = https://github.com/yyyyyyyan/bandcamper
download_url = https://github.com/yyyyyyyan/bandcamper/archive/refs/heads/main.zip
author = yyyyyyyan
author_email = contact@yyyyyyyan.tech
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Communications :: File Sharing
    Topic :: Internet
    Topic :: Multimedia :: Sound/Audio
    Topic :: Utilities
license = MIT
license_files = LICENSE
description = The most powerful Bandcamp downloader there is! If you can play a song on Bandcamp, bandcamper can download it for free ;).
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    bandcamp
    downloader

[options]
packages = find:
install_requires =
    beautifulsoup4>=4.10.0
    click>=8.0.1
    click-option-group>=0.5.3
    lxml>=4.6.3
    mutagen>=1.45.1
    onesecmail>=0.0.1
    requests[socks]>=2.26.0

[options.entry_points]
console_scripts =
    bandcamper = bandcamper.__main__:main
